Add new updates and improvements
