# Modules/Book/app/Models/Book.php
@@ -33,4 +33,9 @@ class Book extends Model
     {
         return $this->belongsTo(User::class);
     }
+
+    public function reviews()
+    {
+        return $this->hasMany(\Modules\Review\Models\Review::class);
+    }
 }
