# Modules/Review/app/Models/Review.php
@@ -1,0 +1,30 @@
+<?php
+
+namespace Modules\Review\Models;
+
+use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Modules\Book\Models\Book;
+use App\Models\User;
+
+class Review extends Model
+{
+    use HasFactory;
+
+    protected $fillable = [
+        'book_id',
+        'user_id',
+        'rating',
+        'comment'
+    ];
+
+    public function book()
+    {
+        return $this->belongsTo(Book::class);
+    }
+
+    public function user()
+    {
+        return $this->belongsTo(User::class);
+    }
+}
